test/patterns/s0020_valid_parentheses/hafis/starchat/syntax_checking.txt
./test/s0020_valid_parentheses/hafis/starchat/build/Solution.java:18: error: incomparable types: boolean and int
//@ ensures((\result == 0) || (\result == 1));
                     ^
./test/s0020_valid_parentheses/hafis/starchat/build/Solution.java:18: error: incomparable types: boolean and int
//@ ensures((\result == 0) || (\result == 1));
                                       ^
./test/s0020_valid_parentheses/hafis/starchat/build/Solution.java:19: error: incomparable types: boolean and int
//@ ensures((s.equals("()")) ==> (\result == 1));
                                          ^
./test/s0020_valid_parentheses/hafis/starchat/build/Solution.java:20: error: incomparable types: boolean and int
//@ ensures((s.equals("(]")) ==> (\result == 0));
                                          ^
./test/s0020_valid_parentheses/hafis/starchat/build/Solution.java:21: error: incomparable types: boolean and int
//@ ensures((s.equals("()[]{}")) ==> (\result == 1));
                                              ^
./test/s0020_valid_parentheses/hafis/starchat/build/Solution.java:22: error: incomparable types: boolean and int
//@ ensures((s.equals("{[]}")) ==> (\result == 1));
                                            ^
./test/s0020_valid_parentheses/hafis/starchat/build/Solution.java:23: error: incomparable types: boolean and int
//@ ensures((s.equals("([)]")) ==> (\result == 0));
                                            ^
7 errors
